force-app/main/default/objects/Over__c/Over__c.object-meta.xml
<CustomObject>
    <label>Over</label>
    <nameField>
        <displayFormat>OVER-{0000000000}</displayFormat>
        <label>Over Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>