force-app/main/default/objects/Over__c/fields/CurrentOverNumber__c.field-meta.xml
<CustomField>
    <fullName>CurrentOverNumber__c</fullName>
    <formula>IF (
    LegalBalls__c &gt; 0 &amp;&amp; LegalBalls__c &lt; 6, 
    OverNumber__c - 1 + ( LegalBalls__c / 10),  
    IF ( 
        LegalBalls__c = 0, 
        OverNumber__c - 1 + 0.0, 
        OverNumber__c + 0.0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Over Number</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>