force-app/main/default/objects/Over__c/fields/Inning__c.field-meta.xml
<CustomField>
    <fullName>Inning__c</fullName>
    <label>Inning</label>
    <referenceTo>Inning__c</referenceTo>
    <relationshipLabel>Overs</relationshipLabel>
    <relationshipName>Overs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>