force-app/main/default/objects/Over__c/fields/LegalBalls__c.field-meta.xml
<CustomField>
    <fullName>LegalBalls__c</fullName>
    <label>Legal Balls</label>
    <summaryFilterItems>
        <field>Ball__c.BallType__c</field>
        <operation>equals</operation>
        <value>Legal, Wicket</value>
    </summaryFilterItems>
    <summaryForeignKey>Ball__c.Over__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>