force-app/main/default/objects/Over__c/fields/OverFinished__c.field-meta.xml
<CustomField>
    <fullName>OverFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over Finished</label>
    <type>Checkbox</type>
</CustomField>