force-app/main/default/objects/Over__c/fields/OverNumber__c.field-meta.xml
<CustomField>
    <fullName>OverNumber__c</fullName>
    <label>Over Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>