force-app/main/default/objects/Over__c/fields/TotalExtras__c.field-meta.xml
<CustomField>
    <fullName>TotalExtras__c</fullName>
    <label>Total Extras</label>
    <summaryFilterItems>
        <field>Ball__c.BallType__c</field>
        <operation>equals</operation>
        <value>Wide, No Ball</value>
    </summaryFilterItems>
    <summaryForeignKey>Ball__c.Over__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>