force-app/main/default/objects/Over__c/fields/TotalRuns__c.field-meta.xml
<CustomField>
    <fullName>TotalRuns__c</fullName>
    <label>Total Runs</label>
    <summarizedField>Ball__c.RunsScored__c</summarizedField>
    <summaryForeignKey>Ball__c.Over__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>