force-app/main/default/objects/Over__c/fields/TotalWickets__c.field-meta.xml
<CustomField>
    <fullName>TotalWickets__c</fullName>
    <label>Total Wickets</label>
    <summaryFilterItems>
        <field>Ball__c.BallType__c</field>
        <operation>equals</operation>
        <value>Wicket</value>
    </summaryFilterItems>
    <summaryForeignKey>Ball__c.Over__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>