force-app/main/default/objects/Over__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BowledBy__c</columns>
    <columns>Inning__c</columns>
    <columns>LegalBalls__c</columns>
    <columns>OverFinished__c</columns>
    <columns>OverNumber__c</columns>
    <columns>TotalRuns__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>